Adding compute linear regression to graph for graph of latitude vs max temp in Weatherpy.ipynb

--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -432,7 +432,7 @@
    "source": [
     "# Narrow down cities that fit criteria and drop any results with null values\n",
     "# YOUR CODE HERE\n",
-    "\n",
+    "ideal_weather =  city_data_df.\n",
     "# Drop any rows with null values\n",
     "# YOUR CODE HERE\n",
     "\n",
