In VacationPy.ipynb adding hotel_df copy

--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -709,18 +709,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>cabo san lucas</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>22.8909</td>\n",
+       "      <td>22.8909</td>\n",
+       "      <td>53</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>tura</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>25.5198</td>\n",
+       "      <td>25.5198</td>\n",
+       "      <td>39</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>155</th>\n",
+       "      <td>sur</td>\n",
+       "      <td>OM</td>\n",
+       "      <td>22.5667</td>\n",
+       "      <td>22.5667</td>\n",
+       "      <td>49</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>coquimatlan</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>19.2000</td>\n",
+       "      <td>19.2000</td>\n",
+       "      <td>74</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>brisas de zicatela</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>15.8369</td>\n",
+       "      <td>15.8369</td>\n",
+       "      <td>88</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193</th>\n",
+       "      <td>aleg</td>\n",
+       "      <td>MR</td>\n",
+       "      <td>17.0481</td>\n",
+       "      <td>17.0481</td>\n",
+       "      <td>23</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>233</th>\n",
+       "      <td>remire-montjoly</td>\n",
+       "      <td>GF</td>\n",
+       "      <td>4.9167</td>\n",
+       "      <td>4.9167</td>\n",
+       "      <td>100</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>254</th>\n",
+       "      <td>monywa</td>\n",
+       "      <td>MM</td>\n",
+       "      <td>22.1167</td>\n",
+       "      <td>22.1167</td>\n",
+       "      <td>55</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>292</th>\n",
+       "      <td>ciudad lazaro cardenas</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>17.9583</td>\n",
+       "      <td>17.9583</td>\n",
+       "      <td>83</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>323</th>\n",
+       "      <td>massawa</td>\n",
+       "      <td>ER</td>\n",
+       "      <td>15.6097</td>\n",
+       "      <td>15.6097</td>\n",
+       "      <td>74</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>425</th>\n",
+       "      <td>san ignacio</td>\n",
+       "      <td>BZ</td>\n",
+       "      <td>17.1561</td>\n",
+       "      <td>17.1561</td>\n",
+       "      <td>88</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>435</th>\n",
+       "      <td>matoury</td>\n",
+       "      <td>GF</td>\n",
+       "      <td>4.8483</td>\n",
+       "      <td>4.8483</td>\n",
+       "      <td>100</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>447</th>\n",
+       "      <td>bafoulabe</td>\n",
+       "      <td>ML</td>\n",
+       "      <td>13.8065</td>\n",
+       "      <td>13.8065</td>\n",
+       "      <td>23</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>459</th>\n",
+       "      <td>al hawatah</td>\n",
+       "      <td>SD</td>\n",
+       "      <td>13.4167</td>\n",
+       "      <td>13.4167</td>\n",
+       "      <td>57</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       City Country      Lat      Lat  Humidity Hotel Name\n",
+       "0            cabo san lucas      MX  22.8909  22.8909        53           \n",
+       "96                     tura      IN  25.5198  25.5198        39           \n",
+       "155                     sur      OM  22.5667  22.5667        49           \n",
+       "159             coquimatlan      MX  19.2000  19.2000        74           \n",
+       "170      brisas de zicatela      MX  15.8369  15.8369        88           \n",
+       "193                    aleg      MR  17.0481  17.0481        23           \n",
+       "233         remire-montjoly      GF   4.9167   4.9167       100           \n",
+       "254                  monywa      MM  22.1167  22.1167        55           \n",
+       "292  ciudad lazaro cardenas      MX  17.9583  17.9583        83           \n",
+       "323                 massawa      ER  15.6097  15.6097        74           \n",
+       "425             san ignacio      BZ  17.1561  17.1561        88           \n",
+       "435                 matoury      GF   4.8483   4.8483       100           \n",
+       "447               bafoulabe      ML  13.8065  13.8065        23           \n",
+       "459              al hawatah      SD  13.4167  13.4167        57           "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Use the Pandas copy function to create DataFrame called hotel_df to store the city, country, coordinates, and humidity\n",
-    "# YOUR CODE HERE\n",
+    "hotel_df =  ideal_weather[[\"City\", \"Country\", \"Lat\", \"Lat\", \"Humidity\"]].copy()\n",
     "\n",
     "# Add an empty column, \"Hotel Name,\" to the DataFrame so you can store the hotel found using the Geoapify API\n",
-    "# YOUR CODE HERE\n",
+    "hotel_df[\"Hotel Name\"]=\"\"\n",
     "\n",
     "# Display sample data\n",
-    "# YOUR CODE HERE"
+    "hotel_df"
    ]
   },
   {
